--- a/static/index.html
+++ b/static/index.html
@@ -10,55 +10,90 @@
     .file-item { cursor: pointer; padding: 5px; border-bottom: 1px solid #ccc; }
     .file-item:hover { background-color: #f0f0f0; }
     .file-details { margin-top: 20px; }
+    .translate-button { margin-top: 20px; }
+    #translated-content { margin-top: 20px; white-space: pre-wrap; }
   </style>
 </head>
 <body>
   <h1>File Browser</h1>
   <div class="file-list" id="file-list"></div>
-  <div class="file-details" id="file-details">
+  <div class="file-details" id="file-details" style="display:none;">
     <h2>Metadata</h2>
     <div><strong>Path:</strong> <span id="path"></span></div>
     <div><strong>Size:</strong> <span id="size"></span></div>
     <div><strong>Modification Date:</strong> <span id="modification_date"></span></div>
     <div><strong>Category:</strong> <span id="category"></span></div>
-    <div><strong>Inferred Category:</strong> <span id="inferred_category"></span></div>
     <div><strong>Keywords:</strong> <span id="keywords"></span></div>
     <div><strong>Summary:</strong> <span id="summary"></span></div>
-    <div><strong>PE Info:</strong> <span id="pe_info"></span></div>
+    <div class="translate-button">
+      <button id="translate-button">Translate to Japanese</button>
+    </div>
     <h2>Content</h2>
     <pre id="content"></pre>
+    <h2>Translated Content</h2>
+    <pre id="translated-content"></pre>
   </div>
 
   <script>
     document.addEventListener("DOMContentLoaded", function() {
-      fetch('/files')
-        .then(response => response.json())
-        .then(data => {
-          const fileList = document.getElementById('file-list');
-          data.forEach(file => {
-            const fileItem = document.createElement('div');
-            fileItem.className = 'file-item';
-            fileItem.textContent = file.path;
-            fileItem.addEventListener('click', () => loadFileDetails(file.id));
-            fileList.appendChild(fileItem);
+      const currentDirectory = '/';  // Root directory
+      loadDirectory(currentDirectory);
+
+      function loadDirectory(directory) {
+        fetch(`/files?directory=${encodeURIComponent(directory)}`)
+          .then(response => response.json())
+          .then(data => {
+            const fileList = document.getElementById('file-list');
+            fileList.innerHTML = '';  // Clear previous entries
+
+            data.forEach(file => {
+              const fileItem = document.createElement('div');
+              fileItem.className = 'file-item';
+              fileItem.textContent = file.path;
+              fileItem.addEventListener('click', () => {
+                if (file.is_directory) {
+                  loadDirectory(file.path);
+                } else {
+                  loadFileDetails(file.id);
+                }
+              });
+              fileList.appendChild(fileItem);
+            });
           });
-        });
+      }
 
       function loadFileDetails(fileId) {
         fetch(`/files/${fileId}`)
           .then(response => response.json())
           .then(data => {
             const metadata = data.metadata;
-            document.getElementById('path').textContent = metadata.path;
-            document.getElementById('size').textContent = metadata.size;
-            document.getElementById('modification_date').textContent = new Date(metadata.modification_date * 1000).toLocaleString();
+            document.getElementById('path').textContent = metadata.path || 'N/A';
+            document.getElementById('size').textContent = metadata.size || 'N/A';
+            document.getElementById('modification_date').textContent = metadata.modification_date
+              ? new Date(metadata.modification_date * 1000).toLocaleString()
+              : 'N/A';
             document.getElementById('category').textContent = metadata.category || 'N/A';
-            document.getElementById('inferred_category').textContent = metadata.inferred_category || 'N/A';
             document.getElementById('keywords').textContent = metadata.keywords || 'N/A';
             document.getElementById('summary').textContent = metadata.summary || 'N/A';
-            document.getElementById('pe_info').textContent = metadata.pe_info || 'N/A';
             document.getElementById('content').textContent = data.content || 'N/A';
+            document.getElementById('translated-content').textContent = '';  // Clear previous translation
+            document.getElementById('translate-button').onclick = () => translateContent(data.content);
+            document.getElementById('file-details').style.display = 'block';
           });
+      }
+
+      function translateContent(content) {
+        fetch('/translate', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({ text: content, target_lang: 'ja' })
+        })
+        .then(response => response.json())
+        .then(data => {
+          document.getElementById('translated-content').textContent = data.translated_text || 'Translation failed';
+        });
       }
     });
   </script>
